[gd_scene load_steps=61 format=2]

[ext_resource path="res://scripts/card_opening.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture2D" id=2]
[ext_resource path="res://animations/open_pack/1.png" type="Texture2D" id=3]
[ext_resource path="res://animations/open_pack/2.png" type="Texture2D" id=4]
[ext_resource path="res://animations/open_pack/3.png" type="Texture2D" id=5]
[ext_resource path="res://animations/open_pack/4.png" type="Texture2D" id=6]
[ext_resource path="res://animations/open_pack/5.png" type="Texture2D" id=7]
[ext_resource path="res://animations/open_pack/6.png" type="Texture2D" id=8]
[ext_resource path="res://animations/open_pack/7.png" type="Texture2D" id=9]
[ext_resource path="res://animations/open_pack/8.png" type="Texture2D" id=10]
[ext_resource path="res://animations/open_pack/9.png" type="Texture2D" id=11]
[ext_resource path="res://animations/open_pack/10.png" type="Texture2D" id=12]
[ext_resource path="res://animations/open_pack/11.png" type="Texture2D" id=13]
[ext_resource path="res://animations/open_pack/12.png" type="Texture2D" id=14]
[ext_resource path="res://animations/open_pack/13.png" type="Texture2D" id=15]
[ext_resource path="res://animations/open_pack/14.png" type="Texture2D" id=16]
[ext_resource path="res://animations/open_pack/15.png" type="Texture2D" id=17]
[ext_resource path="res://animations/open_pack/16.png" type="Texture2D" id=18]
[ext_resource path="res://animations/open_pack/17.png" type="Texture2D" id=19]
[ext_resource path="res://animations/open_pack/18.png" type="Texture2D" id=20]
[ext_resource path="res://animations/open_pack/19.png" type="Texture2D" id=21]
[ext_resource path="res://animations/open_pack/20.png" type="Texture2D" id=22]
[ext_resource path="res://animations/open_pack/21.png" type="Texture2D" id=23]
[ext_resource path="res://animations/open_pack/22.png" type="Texture2D" id=24]
[ext_resource path="res://animations/open_pack/23.png" type="Texture2D" id=25]
[ext_resource path="res://animations/open_pack/24.png" type="Texture2D" id=26]
[ext_resource path="res://animations/open_pack/25.png" type="Texture2D" id=27]
[ext_resource path="res://animations/open_pack/26.png" type="Texture2D" id=28]
[ext_resource path="res://animations/open_pack/27.png" type="Texture2D" id=29]
[ext_resource path="res://animations/open_pack/28.png" type="Texture2D" id=30]
[ext_resource path="res://animations/open_pack/29.png" type="Texture2D" id=31]
[ext_resource path="res://animations/open_pack/30.png" type="Texture2D" id=32]
[ext_resource path="res://animations/open_pack/31.png" type="Texture2D" id=33]
[ext_resource path="res://animations/open_pack/32.png" type="Texture2D" id=34]
[ext_resource path="res://animations/open_pack/33.png" type="Texture2D" id=35]
[ext_resource path="res://animations/open_pack/34.png" type="Texture2D" id=36]
[ext_resource path="res://animations/open_pack/35.png" type="Texture2D" id=37]
[ext_resource path="res://animations/open_pack/36.png" type="Texture2D" id=38]
[ext_resource path="res://animations/open_pack/37.png" type="Texture2D" id=39]
[ext_resource path="res://animations/open_pack/38.png" type="Texture2D" id=40]
[ext_resource path="res://animations/open_pack/39.png" type="Texture2D" id=41]
[ext_resource path="res://animations/open_pack/40.png" type="Texture2D" id=42]
[ext_resource path="res://animations/open_pack/41.png" type="Texture2D" id=43]
[ext_resource path="res://animations/between_cards/anim_1.png" type="Texture2D" id=44]
[ext_resource path="res://animations/between_cards/anim_2.png" type="Texture2D" id=45]
[ext_resource path="res://animations/between_cards/anim_3.png" type="Texture2D" id=46]
[ext_resource path="res://animations/between_cards/anim_4.png" type="Texture2D" id=47]
[ext_resource path="res://animations/between_cards/anim_5.png" type="Texture2D" id=48]
[ext_resource path="res://animations/between_cards/anim_6.png" type="Texture2D" id=49]
[ext_resource path="res://animations/between_cards/anim_7.png" type="Texture2D" id=50]
[ext_resource path="res://animations/between_cards/anim_8.png" type="Texture2D" id=51]
[ext_resource path="res://animations/between_cards/anim_9.png" type="Texture2D" id=52]
[ext_resource path="res://animations/between_cards/anim_10.png" type="Texture2D" id=53]
[ext_resource path="res://animations/between_cards/anim_11.png" type="Texture2D" id=54]
[ext_resource path="res://animations/between_cards/anim_12.png" type="Texture2D" id=55]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=56]
[ext_resource path="res://images/battle_mode/battle_lose.png" type="Texture2D" id=57]
[ext_resource path="res://ubuntu150.tres" type="FontFile" id=58]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ) ],
"loop": false,
"name": "opening",
"speed": 15.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource( 2 )

[node name="pack_open_anim" type="AnimatedSprite2D" parent="."]
position = Vector2( 900, 500 )
frames = SubResource( 1 )

[node name="BetweenCardsAnim" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2( 677.851, 365.426 )
z_index = 1
frames = SubResource( 2 )
animation = "opening"

[node name="ResultOverlay" type="Control" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource( 56 )

[node name="ResultImage" type="TextureRect" parent="ResultOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -248.664
offset_right = 200.0
offset_bottom = -148.664
texture = ExtResource( 57 )

[node name="YourScoreLabel" type="Label" parent="ResultOverlay"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 360.407
offset_top = -17.0
offset_right = 497.407
offset_bottom = 17.0
scale = Vector2( 2, 2 )
theme = ExtResource( 56 )
text = "Your Score :"

[node name="YourScoreVar" type="Label" parent="ResultOverlay/YourScoreLabel"]
offset_left = 143.0
offset_right = 178.0
offset_bottom = 34.0
theme = ExtResource( 56 )
text = "NA"

[node name="OpponentScoreLabel" type="Label" parent="ResultOverlay"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -733.829
offset_top = -17.0
offset_right = -560.829
offset_bottom = 17.0
scale = Vector2( 2, 2 )
theme = ExtResource( 56 )
text = "Opponent Score :"

[node name="OpponentScoreVar" type="Label" parent="ResultOverlay/OpponentScoreLabel"]
offset_left = 198.775
offset_right = 233.775
offset_bottom = 34.0
theme = ExtResource( 56 )
text = "NA"

[node name="Button" type="Button" parent="ResultOverlay"]
offset_left = 926.937
offset_top = 905.713
offset_right = 1006.94
offset_bottom = 945.713
scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 56 )
text = "NEXT"

[node name="Title" type="Label" parent="ResultOverlay"]
offset_left = 510.0
offset_top = 20.0
offset_right = 1378.0
offset_bottom = 189.0
custom_fonts/font = ExtResource( 58 )
text = "Battle Recap"

[connection signal="animation_finished" from="pack_open_anim" to="." method="_on_pack_open_anim_animation_finished"]
[connection signal="animation_finished" from="BetweenCardsAnim" to="." method="_on_BetweenCardsAnim_animation_finished"]
[connection signal="pressed" from="ResultOverlay/Button" to="." method="_on_Button_pressed"]
